# hello_realsense

./: CMakeLists.txt  hello-realsense.cpp  hello-realsense.h  shoot_template.cpp
python/: main.py
template_pcd/: 1.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd  template_list.txt
